# perambulate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run-jupyter.bat  syntax.py
docs/: index.md
docs/user-guides/: condition-modifiers.md  condition_filters.md
perambulate/: __init__.py  datasets.py
perambulate/condition/: __init__.py  condition.py  functions.py  periodic.py  utils.py  valuesearch.py
perambulate/core/: api.py  condition.py  dtypes.py  periodic.py  utils.py  valuesearch.py
perambulate/datasets/: __init__.py  ecg.csv
perambulate/filters/: __init__.py
pursue/condition/: condition.py
tests/: conftest.py  test_perambulate.py  test_pursue.py
tests/unit/condition/: test_condition_filters.py  test_construction.py  test_filters.py  test_operators.py  test_slicers.py  test_time_filters.py
